# big_data_final_project

./: .gitignore  Dockerfile  README.md  aggregate.py  docker-compose.yaml  main.py  objectives.md  plotting.py  pyproject.toml  summarize_data.py  summarize_parquet.py  test.py
app/: db.py  etl.py  graph_query.py
src/app/: aggregates_to_neo4j.py  api.py  dashboard.py  db.py  etl.py  graph_query.py  main.py  schemas.py  simulate.py
src/app/static/dashboard/: syn_count.html  syn_count.js
